// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationCard displays legal notice 1`] = `
<li
  className="font-body-2xs"
  key="mock-document-3"
>
  <a
    className="text-medium"
    href="/applications/mock_application_id/documents/mock-document-3"
  >
    Approval notice (PDF)
  </a>
  <div
    className="text-base-dark"
  >
    Posted 1/1/2021
  </div>
</li>
`;

exports[`ApplicationCard displays legal notice 2`] = `
<li
  className="font-body-2xs"
  key="mock-document-4"
>
  <a
    className="text-medium"
    href="/applications/mock_application_id/documents/mock-document-4"
  >
    Denial notice (PDF)
  </a>
  <div
    className="text-base-dark"
  >
    Posted 1/1/2021
  </div>
</li>
`;

exports[`ApplicationCard displays legal notice 3`] = `
<li
  className="font-body-2xs"
  key="mock-document-5"
>
  <a
    className="text-medium"
    href="/applications/mock_application_id/documents/mock-document-5"
  >
    Request for more information (PDF)
  </a>
  <div
    className="text-base-dark"
  >
    Posted 1/1/2021
  </div>
</li>
`;

exports[`ApplicationCard renders Alert inside the component when there is an error loading documents 1`] = `
<Alert
  noIcon={true}
>
  An error was encountered while checking your application for documents. If this continues to happen, you may call the Paid Family Leave Contact Center at 833‑344‑7365
</Alert>
`;

exports[`ApplicationCard renders a card for the given application 1`] = `
<article
  className="maxw-mobile-lg border border-base-lighter margin-bottom-3"
>
  <div
    className="bg-base-lightest padding-3"
  >
    <Heading
      className="margin-bottom-05 margin-top-0"
      level="2"
    >
      Application 2
    </Heading>
  </div>
  <div
    className="padding-3"
  >
    <ButtonLink
      className="display-block margin-top-0"
      href="/claims/checklist?claim_id=mock_application_id"
    >
      Complete your application
    </ButtonLink>
  </div>
</article>
`;
